@@ -1,0 +1,1 @@
+ipython -c "import nose; nose.run()"
